# license_plate_detector

./: CMakeLists.txt  README.md
src/: main.cpp
